--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/saas_lawncare?schema=public"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_..."
 CLERK_SECRET_KEY="sk_test_..."
+CLERK_WEBHOOK_SIGNING_SECRET="whsec_..."
