--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pg": "^8.18.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "svix": "^1.84.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
