--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.37.3",
+    "@fontsource/ibm-plex-mono": "^5.2.7",
+    "@fontsource/plus-jakarta-sans": "^5.2.8",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "next": "16.1.6",
